[package]
name = "explode"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive", "string"] }
config = "0.15.9"
is_executable = "1.0.4"
resolve-path = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
snafu = { version = "0.8.5"}
tinytemplate = "1.2.1"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29.0", features = ["fs"] }
